# ward-coverage

./: README.md  pyproject.toml  report.py  sonar-project.properties
.github/workflows/: python-lint.yml  python-publish.yml  python-test.yml
src/ward_coverage/: __init__.py  hook_impl.py
test/: hook_impl_test.py  test_suite.py
